--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -191,6 +191,7 @@ body.dark-theme .userDashBoard{
   margin-top: 8%;
   margin-left: 3%;
   font-family: 'Rajdhani', sans-serif;
+  color: #151fdd;
 }
 body.dark-theme .Home h4{
   color: #b89393;
