--- a/Client/src/App.css
+++ b/Client/src/App.css
@@ -145,6 +145,7 @@ main{
   width: 100%;
   line-height: 10px;
   z-index: 999;
+  top: 0;
   background: linear-gradient(to right, #dd1568, #9e164f);
   box-shadow: 0px 10px 6px rgba(247, 247, 250, 0.1);
 
@@ -217,6 +218,7 @@ main{
 #sub_menu_user .sub_li{
   position: relative;
 } 
+
 
 
 /* Counter Container  */
@@ -342,6 +344,9 @@ main{
 }
 
 /* Logout */
+
+
+
 
 .Logout_Btn{
   border: none;
