--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -230,3 +230,36 @@ body.dark-theme .circle {
   left: 50%;
   transform: translate(-50%, -50%);
 }
+
+#my_home_cont #my_home_det h4{
+  color: #681212;
+}
+body.dark-theme #my_home_cont #my_home_det h4{
+  color: #df9a9a;
+}
+.Footer{
+  position: absolute;
+  width: 100%;
+  background: none;
+  bottom: 0;
+}
+.Footer div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.Footer div a{
+  display: flex;
+  justify-content: center;
+  text-decoration: none;
+  padding: 10px;
+  list-style: none;
+  color: #75175a;
+}
+
+
+@media screen and (max-width: 375px){
+  .Home h4{
+    margin-top: 5rem;
+  }
+}
