--- a/Client/src/index.css
+++ b/Client/src/index.css
@@ -279,7 +279,22 @@ body.dark-theme .Footer div a{
   color: #b87ba6;
 }
 
+/* other title */
+#div_title{
+  color: #000;
+}
 
+.About_page #my_about_Info{
+  position: relative;
+  margin: 10%;
+  justify-content: center;
+}
+.About_page #my_about_Info h1{
+  font-size: 32px;
+}
+.About_page #my_about_Info p{
+  font-size: 18px;
+}
 @media screen and (max-width: 375px){
   .Home h4{
     margin-top: 5rem;
